# The-Balancer

./: Base.SLDPRT  Bottom of screen holder (1).SLDPRT  CMakeLists.txt  README.md  ThisArm.STL  Top of screen holder.SLDPRT  TopScreen.STL  balanceIt.c  universal joint.SLDPRT
